--- a/src/styles/style2.css
+++ b/src/styles/style2.css
@@ -16,9 +16,49 @@ input[type=range]::-webkit-slider-runnable-track {
   background: #7900a8;
   border-radius: 14px;
   border: 0px solid #000000;
+  margin-top: 3px;
 }
 
 input[type=range]::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px #000000;
+  border: 0px solid #000000;
+  height: 20px;
+  width: 20px;
+  border-radius: 12px;
+  background: #5452e1;
+  box-shadow: 0px 0px 4px rgb(0, 0, 0);
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -3px;
+}
+
+
+
+
+
+.trackParams input[type=range] {
+  height: 26px;
+  -webkit-appearance: none;
+  background-color: black;
+  margin-top: -4px;
+}
+.trackParams input[type=range]:focus {
+  outline: none;
+}
+
+.trackParams input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 14px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 2px 2px 4px #bb01cc;
+  background: #7900a8;
+  border-radius: 14px;
+  border: 0px solid #000000;
+  margin-top: 3px;
+}
+
+.trackParams input[type=range]::-webkit-slider-thumb {
   box-shadow: 0px 0px 0px #000000;
   border: 0px solid #000000;
   height: 20px;
